# Paddle

./: CMakeLists.txt  README.md
paddle/fluid/: API.spec
paddle/fluid/compiler/: CMakeLists.txt
paddle/fluid/compiler/paddle2piano/: CMakeLists.txt  piano_compile_pass.cc  piano_compile_pass.h  piano_compile_pass_tester.cc  piano_graph_executor.cc  piano_graph_executor.h  piano_graph_executor_test.cc  piano_op_kernel.h  piano_op_kernel_context.cc  piano_op_kernel_context.h  piano_op_kernel_context_test.cc  piano_op_registry.cc  piano_op_registry.h  piano_op_registry_test.cc  piano_scope.h  vartype_utils.cc  vartype_utils.h
paddle/fluid/compiler/piano/: CMakeLists.txt  layout.cc  layout.h  note_builder.cc  note_builder.h  note_builder_test.cc  shape.cc  shape.h  shape_test.cc
paddle/fluid/compiler/piano/backends/: CMakeLists.txt  compiler.h  excutable.h  kernel_executable.h  kernel_executor.h  note_visitor_base.h  schedule_wrapper.h  status.h
paddle/fluid/compiler/piano/backends/llvm_ir/: CMakeLists.txt  executable_pool.cc  executable_pool.h  gpu_compiler.cc  gpu_compiler.h  gpu_ir_emitter.cc  gpu_ir_emitter.h  gpu_primitive_ir_emitter.cc  gpu_primitive_ir_emitter.h  gpu_primitive_ir_emitter_test.cc  ir_emitter.cc  ir_emitter.h  llvm_compiler.cc  llvm_compiler.h  llvm_utils.cc  llvm_utils.h  nvptx_compiler.cc  nvptx_compiler.h  nvptx_compiler_test.cc  nvptx_executable.cc  nvptx_executable.h  nvptx_ir_emitter.cc  nvptx_ir_emitter.h  nvptx_ir_emitter_test.cc  nvptx_primitive_ir_emitter.cc  nvptx_primitive_ir_emitter.h  nvptx_primitive_ir_emitter_test.cc  primitive_body_generator.h  primitive_ir_emitter.cc  primitive_ir_emitter.h  primitive_ir_emitter_test.cc  primitive_ir_generator.h
paddle/fluid/compiler/piano/backends/llvm_ir/gpu/: CMakeLists.txt  gpu_compiler.cc  gpu_compiler.h  gpu_ir_emitter.cc  gpu_ir_emitter.h  gpu_primitive_ir_emitter.cc  gpu_primitive_ir_emitter.h  gpu_primitive_ir_emitter_test.cc  nvptx_compiler.cc  nvptx_compiler.h  nvptx_primitive_ir_emitter.cc  nvptx_primitive_ir_emitter.h  nvptx_primitive_ir_emitter_test.cc
paddle/fluid/compiler/piano/backends/llvm_ir/gpu/nvptx/: nvptx_compiler.cc  nvptx_compiler.h  nvptx_custom_schedule.h  nvptx_executable.h  nvptx_primitive_ir_emitter.cc  nvptx_primitive_ir_emitter.h
paddle/fluid/compiler/piano/backends/llvm_ir/gpu/rocm/: amd_compiler.h  amd_primitive_ir_emitter.h
paddle/fluid/compiler/piano/backends/llvmir/: primitive_ir_emitter.cc  primitive_ir_emitter.h  primitive_ir_emitter_test.cc  primitive_ir_generator.h
paddle/fluid/compiler/piano/backends/llvmir/gpu/: gpu_primitive_ir_emitter.cc  gpu_primitive_ir_emitter.h  gpu_primitive_ir_emitter_test.cc  nvptx_primitive_ir_emitter.cc  nvptx_primitive_ir_emitter.h  nvptx_primitive_ir_emitter_test.cc
paddle/fluid/compiler/piano/note/: CMakeLists.txt  attribute_key_defs.h  element_type_util.cc  element_type_util.h  element_type_util_test.cc  function.cc  function.h  instruction.cc  instruction.h  module.cc  module.h  note.proto  note_instruction.h  note_ir_test.cc  note_module.h  opcode.h  populate_attribute_value.cc  populate_attribute_value.h  populate_attribute_value_test.cc  type_traits.h  type_traits_test.cc
paddle/fluid/compiler/piano/symbolization/: CMakeLists.txt  meta_op.cc  meta_op.h  meta_op_test.cc  note_builder.cc  note_builder.h  note_builder_test.cc  shape_inference.cc  shape_inference.h  shape_inference_test.cc
paddle/fluid/framework/: attribute.cc  framework.proto  op_desc.cc  parallel_executor.cc  parallel_executor.h  type_defs.h
paddle/fluid/framework/details/: analysis_var_pass.cc  analysis_var_pass_test.cc  build_strategy.cc  build_strategy.h  parallel_ssa_graph_executor.cc  parallel_ssa_graph_executor.h  threaded_ssa_graph_executor.cc
paddle/fluid/framework/ir/: CMakeLists.txt  conv_bn_fuse_with_backward_pass.cc  conv_bn_fuse_with_backward_pass.h  graph.cc  graph.h  pass_tester_helper.h
paddle/fluid/inference/api/: analysis_predictor.cc  api.cc  api_impl.cc  paddle_api.h
paddle/fluid/inference/api/demo_ci/: utils.h
paddle/fluid/inference/tests/api/: CMakeLists.txt  analyzer_deeplabv3plus_tester.cc  tester_helper.h
paddle/fluid/inference/tests/book/: CMakeLists.txt  test_inference_nlp_gru.cc
paddle/fluid/lite/: CMakeLists.txt
paddle/fluid/lite/core/: op_lite.cc  program.cc
paddle/fluid/lite/tools/: build.sh
paddle/fluid/operators/: allclose_op.cc  allclose_op.h
paddle/fluid/platform/: CMakeLists.txt  enforce.h
paddle/fluid/platform/dynload/: cuda_driver.h
paddle/fluid/pybind/: inference_api.cc  ir.cc  pybind.cc
paddle/scripts/: paddle_build.sh
python/paddle/fluid/: compiler.py  executor.py  framework.py  parallel_executor.py
(+7 files in other folders)
